force-app/main/default/objects/Picklist_Permission_Mapping__c/Picklist_Permission_Mapping__c.object-meta.xml
<CustomObject>
    <label>Picklist Permission Mapping</label>
    <pluralLabel>Picklist Permission Mappings</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>PPM-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>