force-app/main/default/objects/Picklist_Permission_Mapping__c/fields/Custom_Permission_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission_API_Name__c</fullName>
    <label>Custom Permission API Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>