force-app/main/default/objects/Picklist_Permission_Mapping__c/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <label>Field Mapping</label>
    <type>MasterDetail</type>
    <referenceTo>Custom_Field_Mapping__c</referenceTo>
    <relationshipLabel>Picklist Permission Mappings</relationshipLabel>
    <relationshipName>Picklist_Permission_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>